--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div>
-            <input id="inputValue" class="form-control w-25 mt-3" type="text" placeholder="Впиши Число">
+            <input id="inputValue" class="form-control w-25 mt-3" type="text" placeholder="Впиши число">
             <button id="calcB" class="btn btn-primary mt-3">Прочитать</button>
             <h4 id="result" class="mt-1"></h4>
         </div>
