--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <div>
             <input id="inputValue" class="form-control mt-3" type="text" placeholder="Впиши число">
             <button id="calcB" class="btn btn-primary mt-3">Прочитать</button>
-            <h4 id="result" class="mt-1"></h4>
         </div>
     </div>
+    <h5 id="result" class="mt-2 text-center"></h5>
+
     
     <script src="assets/js/app.js"></script>
 </body>
